# sso-poc

./: README.md  pyproject.toml  server.py  utils.py
openid/adhoc/: router.py
saml/adhoc/: router.py  templates.py
saml/adhoc/templates/: authn_request.xml  sp_metadata.xml
saml/pysaml/: router.py
